# particles

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  cmd.txt  imgui.ini  ind.py  part  pfile.geany  render_doc_conf.cap
data/: geometry.gs  particle.cs  particle.fs  particle.gs  particle.vs  particles.xcf  plane.vs  suzanne.fs  suzanne.vs
data/shaders/background/: gradiant.fs
data/shaders/basic/: projection.vs
data/shaders/basic/phong/: phong.fs
data/shaders/particle/: particle.cs  particle.fs  particle.gs  particle.vs
data/shaders/particle/square/: init.cs  rand.cs  square.fs  square.gs  square.vs  update.cs
data/shaders/plane/: plane.fs  plane.vs
data/shaders/post/: post.fs  post.vs
data/shaders/post/fxaa/: fxaa.fs  luma.fs
src/: IndicedMesh.cc  IndicedMesh.h  IndicedMesh.hh  basic_mesh.cc  basic_mesh.hh  camera.cc  camera.h  camera.hh  data.h  data.hh  drawable.hh  image_handler.cc  image_handler.hh  indiced_mesh.cc  indiced_mesh.hh  main.cc  mesh.h  mesh.hh  particle_handler.cc  particle_handler.h  particle_handler.hh  particle_transform_feedback.cc  particle_transform_feedback.hh  pass.hh  shader.cc  shader.h  shader_handler.cc  shader_handler.h  shader_handler.hh  tools.cc  tools.h  tools.hh  window_handler.cc  window_handler.h  window_handler.hh
src/drawable/: drawable.hh
src/drawable/material/: material.hh
src/drawable/mesh/: basic_mesh.hh  indiced_mesh.hh
src/drawable/object/: object.hh
src/graph/scene/: scene_context.hh  scene_graph.hh  scene_node.cc  scene_node.hh
src/math/: matrix_stack.hh
src/object/: drawable.hh  positionable.hh  render_object.hh
src/object/camera/: camera.cc  camera.hh
src/object/material/: material.hh
src/object/mesh/: basic_mesh.cc  basic_mesh.hh  indiced_mesh.cc  indiced_mesh.hh  mesh.hh
src/object/mesh/primitive/: cube_mesh.hh  plane_mesh.hh  quad_mesh.hh
src/object/particle/: particle_handler.cc  particle_handler.hh
src/object/particle/square_emitter/: square_emitter.cc  square_emitter.hh
src/post/framebuffer/: framebuffer.cc  framebuffer_handler.cc  framebuffer_handler.hh
src/post/pass/: pass.hh
src/scene/: scene.cc  scene.hh  scene_context.hh
src/scene/node/: drawable_node.hh  positionable_node.hh  scene_node.cc  scene_node.hh
src/shaders/: shaderdb.cc  shaderdb.hh
(+10 files in other folders)
